# manager_backend/api.py
@@ -5,6 +5,7 @@ from .features.app.routes import router as app_router
 from .features.profiles.routes import router as profiles_router
 from .features.runtime.routes import router as runtime_router
 from .features.proxies.routes import router as proxies_router
+from .features.settings.routes import router as settings_router
 from .dependencies import require_authenticated_session
 from .schemas.common import ErrorEnvelope
 
@@ -23,3 +24,4 @@ api_router.include_router(catalog_router)
 api_router.include_router(profiles_router)
 api_router.include_router(runtime_router)
 api_router.include_router(proxies_router)
+api_router.include_router(settings_router)
